Resolve conflito no .gitignore

--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>OpticAI - Revolução em Gestão e Automação para Óticas</title>
-    <meta name="description" content="Transforme sua ótica com inteligência artificial. Sistema de gestão completo + 5 agentes de IA trabalhando 24/7 no WhatsApp para aumentar vendas e automatizar processos.">
-    <meta name="keywords" content="ótica, gestão, automação, inteligência artificial, WhatsApp, vendas">
+    <title>OpticAI - Revolução em Gestão Inteligente para Óticas</title>
+    <meta name="description" content="Transforme sua ótica com IA. Sistema de gestão completo + equipe de agentes digitais 24/7. Aumente vendas e automatize processos." />
   </head>
   <body>
     <div id="root"></div>
